--- a/analysis/perf-analysis.ipynb
+++ b/analysis/perf-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,80 +11,13 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "import glob\n",
-    "from typing import List"
+    "from typing import List\n",
+    "from const import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "WORK_DIR = os.getenv(\"WORK_DIR\")\n",
-    "MAMBA_SMALL_PATH = os.path.join(\n",
-    "    WORK_DIR, \"virtual-sensing/lightning_logs/mamba/config-exp1-200k.json/version_0\"\n",
-    ")\n",
-    "MAMBA_LARGE_PATH = os.path.join(\n",
-    "    WORK_DIR, \"virtual-sensing/lightning_logs/mamba/config-exp2-600k.json/version_0\"\n",
-    ")\n",
-    "\n",
-    "RNN_SMALL_PATH = os.path.join(\n",
-    "    WORK_DIR, \"virtual-sensing/lightning_logs/rnn/config-exp1-200k.json/version_0\"\n",
-    ")\n",
-    "RNN_LARGE_PATH = os.path.join(\n",
-    "    WORK_DIR, \"virtual-sensing/lightning_logs/rnn/config-exp2-600k.json/version_0\"\n",
-    ")\n",
-    "\n",
-    "TRANSFORMER_SMALL_PATH = os.path.join(\n",
-    "    WORK_DIR,\n",
-    "    \"virtual-sensing/lightning_logs/transformer/config-exp1-200k.json/version_0\",\n",
-    ")\n",
-    "TRANSFORMER_LARGE_PATH = os.path.join(\n",
-    "    WORK_DIR,\n",
-    "    \"virtual-sensing/lightning_logs/transformer/config-exp2-600k.json/version_0\",\n",
-    ")\n",
-    "\n",
-    "MAMBA_SMALL_PARAMS = os.path.join(MAMBA_SMALL_PATH, \"hparams.yaml\")\n",
-    "MAMBA_SMALL_CHECKPOINT = os.path.join(\n",
-    "    MAMBA_SMALL_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "MAMBA_SMALL_LOGS = glob.glob(os.path.join(MAMBA_SMALL_PATH, \"*tfevents*\"))[0]\n",
-    "\n",
-    "MAMBA_LARGE_PARAMS = os.path.join(MAMBA_LARGE_PATH, \"hparams.yaml\")\n",
-    "MAMBA_LARGE_CHECKPOINT = os.path.join(\n",
-    "    MAMBA_LARGE_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "MAMBA_LARGE_LOGS = glob.glob(os.path.join(MAMBA_LARGE_PATH, \"*tfevents*\"))[0]\n",
-    "\n",
-    "RNN_SMALL_PARAMS = os.path.join(RNN_SMALL_PATH, \"hparams.yaml\")\n",
-    "RNN_SMALL_CHECKPOINT = os.path.join(\n",
-    "    RNN_SMALL_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "RNN_SMALL_LOGS = glob.glob(os.path.join(RNN_SMALL_PATH, \"*tfevents*\"))[0]\n",
-    "\n",
-    "RNN_LARGE_PARAMS = os.path.join(RNN_LARGE_PATH, \"hparams.yaml\")\n",
-    "RNN_LARGE_CHECKPOINT = os.path.join(\n",
-    "    RNN_LARGE_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "RNN_LARGE_LOGS = glob.glob(os.path.join(RNN_LARGE_PATH, \"*tfevents*\"))[0]\n",
-    "\n",
-    "TRANSFORMER_SMALL_PARAMS = os.path.join(TRANSFORMER_SMALL_PATH, \"hparams.yaml\")\n",
-    "TRANSFORMER_SMALL_CHECKPOINT = os.path.join(\n",
-    "    TRANSFORMER_SMALL_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "TRANSFORMER_SMALL_LOGS = glob.glob(os.path.join(TRANSFORMER_SMALL_PATH, \"*tfevents*\"))[0]\n",
-    "\n",
-    "TRANSFORMER_LARGE_PARAMS = os.path.join(TRANSFORMER_LARGE_PATH, \"hparams.yaml\")\n",
-    "TRANSFORMER_LARGE_CHECKPOINT = os.path.join(\n",
-    "    TRANSFORMER_LARGE_PATH, \"checkpoints/epoch=0-step=2900.ckpt\"\n",
-    ")\n",
-    "TRANSFORMER_LARGE_LOGS = glob.glob(os.path.join(TRANSFORMER_LARGE_PATH, \"*tfevents*\"))[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smoothing = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +70,7 @@
     "    label_size=20,\n",
     "    legend_size=20,\n",
     "    tick_size=18,\n",
+    "    smoothing=0.99\n",
     "):\n",
     "    \"\"\"\n",
     "    Plot and save the data as a PDF file.\n",
@@ -182,205 +107,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For small models validation data\n",
+    "smoothing = 0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract MSE data for small models validation\n",
     "rnn_small_data_val_mse = extract_data(\n",
     "    RNN_SMALL_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
-    "mamaba_small_data_val_mse = extract_data(\n",
+    "mamba_small_data_val_mse = extract_data(\n",
     "    MAMBA_SMALL_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "transformer_small_data_val_mse = extract_data(\n",
     "    TRANSFORMER_SMALL_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "\n",
-    "rnn_small_data_val_l1 = extract_data(RNN_SMALL_LOGS, \"val/l1_loss\", smoothing=smoothing)\n",
-    "mamaba_small_data_val_l1 = extract_data(\n",
-    "    MAMBA_SMALL_LOGS, \"val/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_small_data_val_l1 = extract_data(\n",
-    "    TRANSFORMER_SMALL_LOGS, \"val/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "rnn_small_data_val_smooth_l1 = extract_data(\n",
-    "    RNN_SMALL_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_small_data_val_smooth_l1 = extract_data(\n",
-    "    MAMBA_SMALL_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_small_data_val_smooth_l1 = extract_data(\n",
-    "    TRANSFORMER_SMALL_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "# For large models validation data\n",
+    "# Extract MSE data for large models validation\n",
     "rnn_large_data_val_mse = extract_data(\n",
     "    RNN_LARGE_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
-    "mamaba_large_data_val_mse = extract_data(\n",
+    "mamba_large_data_val_mse = extract_data(\n",
     "    MAMBA_LARGE_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "transformer_large_data_val_mse = extract_data(\n",
     "    TRANSFORMER_LARGE_LOGS, \"val/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "\n",
-    "rnn_large_data_val_l1 = extract_data(RNN_LARGE_LOGS, \"val/l1_loss\", smoothing=smoothing)\n",
-    "mamaba_large_data_val_l1 = extract_data(\n",
-    "    MAMBA_LARGE_LOGS, \"val/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_large_data_val_l1 = extract_data(\n",
-    "    TRANSFORMER_LARGE_LOGS, \"val/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "rnn_large_data_val_smooth_l1 = extract_data(\n",
-    "    RNN_LARGE_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_large_data_val_smooth_l1 = extract_data(\n",
-    "    MAMBA_LARGE_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_large_data_val_smooth_l1 = extract_data(\n",
-    "    TRANSFORMER_LARGE_LOGS, \"val/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "# For small models training data\n",
+    "# Extract MSE data for small models training\n",
     "rnn_small_data_train_mse = extract_data(\n",
     "    RNN_SMALL_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
-    "mamaba_small_data_train_mse = extract_data(\n",
+    "mamba_small_data_train_mse = extract_data(\n",
     "    MAMBA_SMALL_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "transformer_small_data_train_mse = extract_data(\n",
     "    TRANSFORMER_SMALL_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "\n",
-    "rnn_small_data_train_l1 = extract_data(\n",
-    "    RNN_SMALL_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_small_data_train_l1 = extract_data(\n",
-    "    MAMBA_SMALL_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_small_data_train_l1 = extract_data(\n",
-    "    TRANSFORMER_SMALL_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "rnn_small_data_train_smooth_l1 = extract_data(\n",
-    "    RNN_SMALL_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_small_data_train_smooth_l1 = extract_data(\n",
-    "    MAMBA_SMALL_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_small_data_train_smooth_l1 = extract_data(\n",
-    "    TRANSFORMER_SMALL_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "# For large models training data\n",
+    "# Extract MSE data for large models training\n",
     "rnn_large_data_train_mse = extract_data(\n",
     "    RNN_LARGE_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
-    "mamaba_large_data_train_mse = extract_data(\n",
+    "mamba_large_data_train_mse = extract_data(\n",
     "    MAMBA_LARGE_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "transformer_large_data_train_mse = extract_data(\n",
     "    TRANSFORMER_LARGE_LOGS, \"train/mse_loss\", smoothing=smoothing\n",
     ")\n",
     "\n",
-    "rnn_large_data_train_l1 = extract_data(\n",
-    "    RNN_LARGE_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_large_data_train_l1 = extract_data(\n",
-    "    MAMBA_LARGE_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_large_data_train_l1 = extract_data(\n",
-    "    TRANSFORMER_LARGE_LOGS, \"train/l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
-    "rnn_large_data_train_smooth_l1 = extract_data(\n",
-    "    RNN_LARGE_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "mamaba_large_data_train_smooth_l1 = extract_data(\n",
-    "    MAMBA_LARGE_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "transformer_large_data_train_smooth_l1 = extract_data(\n",
-    "    TRANSFORMER_LARGE_LOGS, \"train/smooth_l1_loss\", smoothing=smoothing\n",
-    ")\n",
-    "\n",
     "# Define the data to plot\n",
     "data_small_train_mse = {\n",
     "    \"RNN\": rnn_small_data_train_mse,\n",
-    "    \"Mamba\": mamaba_small_data_train_mse,\n",
+    "    \"Mamba\": mamba_small_data_train_mse,\n",
     "    \"Transformer\": transformer_small_data_train_mse,\n",
     "}\n",
     "\n",
     "data_small_val_mse = {\n",
     "    \"RNN\": rnn_small_data_val_mse,\n",
-    "    \"Mamba\": mamaba_small_data_val_mse,\n",
+    "    \"Mamba\": mamba_small_data_val_mse,\n",
     "    \"Transformer\": transformer_small_data_val_mse,\n",
     "}\n",
     "\n",
     "data_large_train_mse = {\n",
     "    \"RNN\": rnn_large_data_train_mse,\n",
-    "    \"Mamba\": mamaba_large_data_train_mse,\n",
+    "    \"Mamba\": mamba_large_data_train_mse,\n",
     "    \"Transformer\": transformer_large_data_train_mse,\n",
     "}\n",
     "\n",
     "data_large_val_mse = {\n",
     "    \"RNN\": rnn_large_data_val_mse,\n",
-    "    \"Mamba\": mamaba_large_data_val_mse,\n",
+    "    \"Mamba\": mamba_large_data_val_mse,\n",
     "    \"Transformer\": transformer_large_data_val_mse,\n",
     "}\n",
     "\n",
-    "data_small_train_l1 = {\n",
-    "    \"RNN\": rnn_small_data_train_l1,\n",
-    "    \"Mamba\": mamaba_small_data_train_l1,\n",
-    "    \"Transformer\": transformer_small_data_train_l1,\n",
-    "}\n",
-    "\n",
-    "data_small_val_l1 = {\n",
-    "    \"RNN\": rnn_small_data_val_l1,\n",
-    "    \"Mamba\": mamaba_small_data_val_l1,\n",
-    "    \"Transformer\": transformer_small_data_val_l1,\n",
-    "}\n",
-    "\n",
-    "data_large_train_l1 = {\n",
-    "    \"RNN\": rnn_large_data_train_l1,\n",
-    "    \"Mamba\": mamaba_large_data_train_l1,\n",
-    "    \"Transformer\": transformer_large_data_train_l1,\n",
-    "}\n",
-    "\n",
-    "data_large_val_l1 = {\n",
-    "    \"RNN\": rnn_large_data_val_l1,\n",
-    "    \"Mamba\": mamaba_large_data_val_l1,\n",
-    "    \"Transformer\": transformer_large_data_val_l1,\n",
-    "}\n",
-    "\n",
-    "data_small_train_smooth_l1 = {\n",
-    "    \"RNN\": rnn_small_data_train_smooth_l1,\n",
-    "    \"Mamba\": mamaba_small_data_train_smooth_l1,\n",
-    "    \"Transformer\": transformer_small_data_train_smooth_l1,\n",
-    "}\n",
-    "\n",
-    "data_small_val_smooth_l1 = {\n",
-    "    \"RNN\": rnn_small_data_val_smooth_l1,\n",
-    "    \"Mamba\": mamaba_small_data_val_smooth_l1,\n",
-    "    \"Transformer\": transformer_small_data_val_smooth_l1,\n",
-    "}\n",
-    "\n",
-    "data_large_train_smooth_l1 = {\n",
-    "    \"RNN\": rnn_large_data_train_smooth_l1,\n",
-    "    \"Mamba\": mamaba_large_data_train_smooth_l1,\n",
-    "    \"Transformer\": transformer_large_data_train_smooth_l1,\n",
-    "}\n",
-    "\n",
-    "data_large_val_smooth_l1 = {\n",
-    "    \"RNN\": rnn_large_data_val_smooth_l1,\n",
-    "    \"Mamba\": mamaba_large_data_val_smooth_l1,\n",
-    "    \"Transformer\": transformer_large_data_val_smooth_l1,\n",
-    "}\n",
-    "\n",
     "# Call the function for each plot\n",
-    "# MSE Loss\n",
     "plot_and_save(\n",
     "    data_small_train_mse,\n",
     "    \"MSE Train Loss - Experiment 1 (200k Params)\",\n",
@@ -400,50 +209,6 @@
     "    data_large_val_mse,\n",
     "    \"MSE Val Loss - Experiment 2 (600k Params)\",\n",
     "    \"mse_val_loss_large_models.pdf\",\n",
-    ")\n",
-    "\n",
-    "# L1 Loss\n",
-    "plot_and_save(\n",
-    "    data_small_train_l1,\n",
-    "    \"L1 Train Loss - Experiment 1 (200k Params)\",\n",
-    "    \"l1_train_loss_small_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_small_val_l1,\n",
-    "    \"L1 Val Loss - Experiment 1 (200k Params)\",\n",
-    "    \"l1_val_loss_small_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_large_train_l1,\n",
-    "    \"L1 Train Loss - Experiment 2 (600k Params)\",\n",
-    "    \"l1_train_loss_large_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_large_val_l1,\n",
-    "    \"L1 Val Loss - Experiment 2 (600k Params)\",\n",
-    "    \"l1_val_loss_large_models.pdf\",\n",
-    ")\n",
-    "\n",
-    "# Smooth L1 Loss\n",
-    "plot_and_save(\n",
-    "    data_small_train_smooth_l1,\n",
-    "    \"Smooth L1 Train Loss - Experiment 1 (200k Params)\",\n",
-    "    \"smooth_l1_train_loss_small_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_small_val_smooth_l1,\n",
-    "    \"Smooth L1 Val Loss - Experiment 1 (200k Params)\",\n",
-    "    \"smooth_l1_val_loss_small_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_large_train_smooth_l1,\n",
-    "    \"Smooth L1 Train Loss - Experiment 2 (600k Params)\",\n",
-    "    \"smooth_l1_train_loss_large_models.pdf\",\n",
-    ")\n",
-    "plot_and_save(\n",
-    "    data_large_val_smooth_l1,\n",
-    "    \"Smooth L1 Val Loss - Experiment 2 (600k Params)\",\n",
-    "    \"smooth_l1_val_loss_large_models.pdf\",\n",
     ")"
    ]
   }
@@ -464,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
